Add lineage api and some tests
